refactor: Usar Currency en Order directamente